<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bpazy.dial.SettingActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cookie"
            android:textSize="20sp"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="#F0E68C" />

        <EditText
            android:textColor="#FFFFCD"
            android:id="@+id/edit_cookie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_cookie"
            android:textSize="20sp"
            android:layout_weight="3"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textSize="20sp"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="#F0E68C" />

        <EditText
            android:textColor="#FFFFCD"
            android:id="@+id/edit_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_userName"
            android:textSize="20sp"
            android:layout_weight="3"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/return_to_mainactivity"
            android:onClick="turnToMainActivity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/setting_save"
            android:onClick="saveLoginData" />
    </LinearLayout>

</LinearLayout>
